issue-6522/fix-navbar-logo-alignment (#6524)
* fix/navbar-logo-alignment issue6522

* remove: flex on navbar-brand

---------

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -7,8 +7,7 @@
 }
 
 .navbar-logo {
-  height: 70px;
-  padding-top: 5px;
+  height: 45px;
 }
 
 .fa-search {
@@ -731,8 +730,8 @@ display: block;
 
 @media (max-width: 400px) {
  .navbar-logo {
-    height: 60px;
-    padding-top: 10px;
+    height: 40px;
+    padding-inline: 0.5rem;
   }
 }
 
